--- a/daw.css
+++ b/daw.css
@@ -323,6 +323,31 @@ video {
     margin-top: -435px;
 }
 
+.user-controls {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-top: 10px;
+}
+
+.daw-button {
+    width: 30px;
+    height: 30px;
+    font-size: 8px;
+    padding: 2px;
+    text-align: center;
+    background-color: #444;
+    color: white;
+    border: 1px solid #888;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.daw-button:hover {
+    background-color: #666;
+}
+
+
 /* 🎛 Advanced Mixer Faders */
 .fader {
     -webkit-appearance: none; 
